--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="output.css">
     </head>
-    <body class="font-arial flex flex-col items-center sm:h-full sm:w-full">
-        <form class="weatherForm m-[20px]">
-            <input type="text" class="sm:w-[300px] sm:text-2xl sm:w-[200px] cityInput p-[10px] text-xl font-bold border-2 border-gray-400 rounded-xl m-[10px] w-[170px]" placeholder="Enter city">
-            <button type="submit" class="sm:w-[200px] sm:text-2xl sm:w-[150px] w-[125px] h-[55px] px-[5px] font-bold text-lg bg-green-500 text-white rounded-xl border-2">Get Weather</button>
+    <body class="sm:w-auto font-arial flex flex-col items-center w-auto">
+        <form class="weatherForm m-[20px] flex w-full justify-center">
+            <input type="text" class="sm:w-[300px] sm:text-2xl w-[180px] cityInput p-[10px] text-xl font-bold border-2 border-gray-400 rounded-xl m-[10px]" placeholder="Enter city">
+            <button type="submit" class="sm:w-[200px] sm:text-2xl sm:w-[150px] mt-2 h-[55px] px-[5px] font-bold text-lg bg-green-500 text-white rounded-xl border-2">Get Weather</button>
         </form>
 
-        <div class="sm:w-[425px] card rounded-xl mx-auto text-center flex flex-col items-center w-[355px]">
+        <div class="sm:w-[425px] card rounded-xl mx-auto text-center flex flex-col items-center w-full">
             <h1 class="cityDisplay text-5xl font-bold">Mumbai</h1>
             <p class="tempDisplay text-[26px] mt-[60px]">25°C</p>
             <p class="humidityDisplay font-bold text-2xl mb-[25px] italic">Humidity: 75%</p>
