--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="output.css">
     </head>
-    <body class="2xl:w-auto font-arial flex flex-col items-center w-auto">
+    <body class="2xl:w-auto font-arial flex flex-col items-center w-full h-full">
         <form class="weatherForm m-[20px] w-full flex flex-row items-center justify-center">
             <input type="text" class="2xl:w-[300px] 2xl:text-2xl 2xl:h-[60px] h-[100px] w-[400px] cityInput p-[10px] text-3xl font-bold border-2 border-gray-400 rounded-xl m-[10px]" placeholder="Enter city">
             <button type="submit" class="2xl:w-[200px] 2xl:h-[60px] 2xl:text-2xl 2xl:w-[150px] h-[100px] px-[5px] w-[200px] font-bold text-2xl bg-green-500 text-white rounded-xl border-2">Get Weather</button>
         </form>
 
         <div class="2xl:w-[425px] card rounded-xl mx-auto text-center flex flex-col items-center w-full">
-            <h1 class="cityDisplay 2xl:text-5xl text-8xl font-bold">Mumbai</h1>
-            <p class="tempDisplay 2xl:text-[26px] text-6xl pt-2">25°C</p>
+            <h1 class="cityDisplay 2xl:text-5xl text-[96px] font-bold">Mumbai</h1>
+            <p class="tempDisplay 2xl:text-[26px] text-[60px] pt-2">25°C</p>
             <p class="humidityDisplay 2xl:text-2xl font-bold text-5xl pt-2 mb-[25px] italic">Humidity: 75%</p>
             <p class="descDisplay 2xl:text-2xl font-bold text-5xl">Clear Skies</p>
             <img class="weatherEmoji 2xl:w-[100px] m-0 w-[300px]" src="https://raw.githubusercontent.com/visualcrossing/WeatherIcons/refs/heads/main/PNG/3rd%20Set%20-%20Color/clear-day.png">
