--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     </head>
     <body class="md:w-auto font-arial flex flex-col items-center w-full h-full">
         <form class="weatherForm m-[20px] w-full flex flex-row items-center justify-center">
-            <input type="text" class="md:w-[300px] md:text-md md:h-[60px] h-[100px] w-[400px] cityInput p-[10px] text-3xl font-bold border-2 border-gray-400 rounded-xl m-[10px]" placeholder="Enter city">
-            <button type="submit" class="md:w-[200px] md:h-[60px] md:text-md md:w-[150px] h-[100px] px-[5px] w-[200px] font-bold text-md bg-green-500 text-white rounded-xl border-2">Get Weather</button>
+            <input type="text" class="md:w-[300px] md:text-md md:h-[60px] w-[100px] cityInput p-3 w-[230px] text-xl font-bold border-2 border-gray-400 rounded-xl m-[10px]" placeholder="Enter city">
+            <button type="submit" class="md:w-[200px] md:h-[60px] md:text-md md:w-[150px] px-2 py-3 font-bold text-xl bg-green-500 text-white rounded-xl border-2">Get Weather</button>
         </form>
 
-        <div class="md:w-[425px] card rounded-xl mx-auto text-center flex flex-col items-center w-full">
-            <h1 class="cityDisplay md:text-5xl text-[96px] font-bold">Mumbai</h1>
-            <p class="tempDisplay md:text-[26px] text-[60px] pt-2">25°C</p>
-            <p class="humidityDisplay md:text-md font-bold text-5xl pt-2 mb-[25px] italic">Humidity: 75%</p>
-            <p class="descDisplay md:text-md font-bold text-5xl">Clear Skies</p>
-            <img class="weatherEmoji md:w-[100px] m-0 w-[300px]" src="https://raw.githubusercontent.com/visualcrossing/WeatherIcons/refs/heads/main/PNG/3rd%20Set%20-%20Color/clear-day.png">
-            <p class="errorDisplay md:text-md text-4xl">Please enter a city</p>
+        <div class="md:w-[425px] md:h-[500px] card rounded-xl mx-auto text-center flex flex-col items-center w-full">
+            <h1 class="cityDisplay md:text-5xl text-4xl font-bold">Mumbai</h1>
+            <p class="tempDisplay md:text-[26px] text-3xl pt-2">25°C</p>
+            <p class="humidityDisplay md:text-md font-bold text-2xl pt-2 mb-[25px] italic">Humidity: 75%</p>
+            <p class="descDisplay md:text-md font-bold text-2xl">Clear Skies</p>
+            <img class="weatherEmoji md:w-[150px] m-0 w-[100px]" src="https://raw.githubusercontent.com/visualcrossing/WeatherIcons/refs/heads/main/PNG/3rd%20Set%20-%20Color/clear-day.png">
+            <p class="errorDisplay md:text-md text-2xl">Please enter a city</p>
         </div>
-
+        <img class="rickImg" style="display:none" src="https://media1.tenor.com/m/IB9ol7welioAAAAC/dance-vibing.gif" alt=".">
     </body>
     <script src="script.js"></script>
 </html>
