responsive web design fix

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body class="md:w-auto font-arial flex flex-col items-center w-full h-full">
         <form class="weatherForm m-[20px] w-full flex flex-row items-center justify-center">
-            <input type="text" class="md:w-[300px] md:text-md md:h-[60px] w-[100px] cityInput p-3 w-[230px] text-xl font-bold border-2 border-gray-400 rounded-xl m-[10px]" placeholder="Enter city">
-            <button type="submit" class="md:w-[200px] md:h-[60px] md:text-md md:w-[150px] px-2 py-3 font-bold text-xl bg-green-500 text-white rounded-xl border-2">Get Weather</button>
+            <input type="text" class="md:w-[300px] md:text-md md:h-[60px] cityInput p-3 w-[200px] text-xl font-bold border-2 border-gray-400 rounded-xl m-[10px]" placeholder="Enter city">
+            <button type="submit" class="md:w-[200px] md:h-[60px] md:text-md px-1 py-3 font-bold text-lg bg-green-500 text-white rounded-xl border-2">Get Weather</button>
         </form>
 
         <div class="md:w-[425px] md:h-[500px] card rounded-xl mx-auto text-center flex flex-col items-center w-full">
