--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <body class="md:w-auto font-arial flex flex-col items-center w-full h-full">
         <form class="weatherForm m-[20px] w-full flex flex-row items-center justify-center">
             <input type="text" class="md:w-[300px] md:text-md md:h-[60px] cityInput p-3 w-[200px] text-xl font-bold border-2 border-gray-400 rounded-xl m-[10px]" placeholder="Enter city">
-            <button type="submit" class="md:w-[200px] md:h-[60px] md:text-md px-3 py-3 font-bold text-lg bg-green-500 text-white rounded-xl border-2">Get Weather</button>
+            <button type="submit" id="sb" class="md:w-[200px] md:h-[60px] md:text-md px-3 py-3 font-bold text-lg bg-green-500 text-white rounded-xl border-2">Get Weather</button>
         </form>
 
         <div class="md:w-[425px] md:h-[500px] card rounded-xl mx-auto text-center flex flex-col items-center w-full">
@@ -16,7 +16,7 @@
             <p class="tempDisplay md:text-[26px] text-3xl pt-2">25°C</p>
             <p class="humidityDisplay md:text-md font-bold text-2xl pt-2 mb-[25px] italic">Humidity: 75%</p>
             <p class="descDisplay md:text-md font-bold text-2xl">Clear Skies</p>
-            <img class="weatherEmoji md:w-[150px] m-0 w-[100px]" src="https://raw.githubusercontent.com/visualcrossing/WeatherIcons/refs/heads/main/PNG/3rd%20Set%20-%20Color/clear-day.png">
+            <img class="weatherEmoji md:w-[150px] m-0 w-[100px]" src="https://raw.githubusercontent.com/visualcrossing/WeatherIcons/refs/heads/main/PNG/3rd%20Set%20-%20Color/clear-day.png" alt="emoji">
             <p class="errorDisplay md:text-md text-2xl">Please enter a city</p>
         </div>
     </body>
